JI-3236 Fix contrast ratio of progress dots

--- a/css/questionset.css
+++ b/css/questionset.css
@@ -38,7 +38,7 @@
   margin: 0 0.25em;
   cursor: pointer;
   background: #fff;
-  background: #cecece;
+  background: #929292;
 }
 
 .progress-dot.disabled {
